[package]
name = "waitgroup-rs"
version = "0.1.0"
authors = ["dengjie <dengjie.hello2dj@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.4"
async-std = {version = "1.5.0", features = ["attributes"]}
